Correct x overflow

--- a/ClientApp/src/app/menu/menu.component.scss
+++ b/ClientApp/src/app/menu/menu.component.scss
@@ -1,7 +1,6 @@
 @import "../../theme";
 
 .menu{
-  width: 100vw;
   background-color: $primaryColor;
 
   display: flex;
